tests/baselines/reference/constraintsThatReferenceOtherContstraints1.errors.txt
constraintsThatReferenceOtherContstraints1.ts(5,5): error TS2564: Property 'data' has no initializer and is not definitely assigned in the constructor.


==== constraintsThatReferenceOtherContstraints1.ts (1 errors) ====
    interface Object { }
    
    class Foo<T, U extends T> { }
    class Bar<T extends Object, U extends T> {
        data: Foo<Object, Object>; // Error 1 Type 'Object' does not satisfy the constraint 'T' for type parameter 'U extends T'.
        ~~~~
!!! error TS2564: Property 'data' has no initializer and is not definitely assigned in the constructor.
    }
    
    var x: Foo< { a: string }, { a: string; b: number }>; // Error 2 Type '{ a: string; b: number; }' does not satisfy the constraint 'T' for type 
    